=== 0.5.21 2015-01-21

* Added MemberInsightMetrics fields: recommended_budget and top_five_customers
* Added feature fields to AccountLevel.
* Added new fields to the Communication Campaign.
* Updated the CommunicationCampaign proxy model attributes.
* Added transaction_grouping_interval to AlgorithmTestRun proxy model.
* Added new algorithm test result fields.

=== 0.5.20 2015-01-07

* Added recommended_budget to V2::CommunicationCampaign proxy model.
* Removed unneeded attribute from V2::FrontTemplate.
* Added CsvUpload index and process_file methods

=== 0.5.19 2014-12-22

* Added AlgorithmTestRun and AlgorithmTestRunContact proxy models.
* Added temp_s3_url attribute for FrontTemplate objects.
* Added FrontTemplate proxy model.
* Added CommunicationCampaign create method.

=== 0.5.18 2014-11-12

* Updated SocialNetworkProfile and SocialNetworkPage proxy models.

=== 0.5.17 2014-10-15

* Adding MemberInsightMetrics proxy model.

== 0.5.16 2014-10-02

* Added V2::CompanyTermination proxy model
* changed terminate method in V1/V2 Company proxy model to take company_termination parameter

== 0.5.16 2014-09-24

* Added DirectConnect proxy model
* Added stats endpoint to DirectConnect proxy model

== 0.5.15 2014-09-17

* Added notification_user_id to the enterprise_setting proxy model.
* Added enterprise email settings proxy model.
* New enterprise settings added to the EnterpriseSetting proxy mode.

=== 0.5.14 2014-09-03

* Added request_support method to v2/company_user.rb
* Added V2::Configuration model
* Added Company activate method to V2 model.

=== 0.5.13 2014-08-05

* Added PartnerUser proxy model for V2.
* Added CustomerActivity proxy model for V2.

=== 0.5.12 2014-07-24

* Added phone_ext attribute to Company proxy model for both V1 and V2.
* Added CsvUpload proxy model for V2.
* Added CompanyPlace proxy model for V2.

=== 0.5.11 2014-07-10

* SocialNetworkPage proxy model added for V2.
* SocialNetworkProfile proxy model added for V2.
